tests/neg/main-annotation-nonmethod.scala
object myProgram:

  @main val n = 2 // error

  @main class A // error

end myProgram
